--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ typer = {extras = ["all"], version = "^0.12.3"}
 maturin = "^1.5.1"
 numpy = "^1.26.4"
 pillow = "^10.3.0"
+imageio = "^2.34.1"
 
 [project.scripts]
 mosaicfy = "rusty_mosaic.cli:app"
